--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,30 @@
   </dependencies>
   
   
+  <build>
+  <plugins>
+   
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>${runner}</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+   
+</plugins>
+  
+  
+  
+  
+  
+  
+  </build>
+  
+  
   
   
 </project>
